--- a/src/components/Areas.css
+++ b/src/components/Areas.css
@@ -39,15 +39,15 @@ body{
 }
 /* .Mercado{
 } */
-.cards{
+.cardsAreas{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 .card{
-    width: 19rem;
-    height: 20rem;
+    width: 17rem;
+    height: 18rem;
     padding: 1.5rem;
     margin-bottom: 2rem;
     border-radius: 1rem;
@@ -58,6 +58,7 @@ body{
 }
 .card H3{
     text-align: center;
+    font-weight: 800;
 }
 .videos{
     /* margin-top: -9rem; */
@@ -76,6 +77,7 @@ body{
     font-family: "Montserrat", sans-serif;
     font-size: 10px;
     color: #f9004d;
+    font-weight: 600;
     margin-bottom: 2rem;
 }
 .autor{
@@ -85,4 +87,26 @@ body{
     font-weight: 600;
     margin-bottom: 1rem;
 }
-
+.containerBotao{
+    display: flex;
+    justify-content:center;
+    margin-bottom: 3rem;
+}
+.cotacaoAreas {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    text-decoration-line: none;
+    width: 70%;
+    height: 3.5rem;
+    border: 0;
+    border-radius: 5px;
+    background-color: #212428;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    color: #f9004d;
+    font-weight: 700;
+    box-shadow: 5px 5px 5px -5px rgba(0, 0, 0, 0.342),
+        -5px -5px 5px -5px rgba(255, 255, 255, 0.082);
+    cursor: pointer;
+}
