--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,7 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+    box-shadow: 5px 5px 20px -5px rgba(0, 0, 0, 0.205);
   }
   .Header-logo{
     width: 70vmin;
