--- a/src/components/Areas.css
+++ b/src/components/Areas.css
@@ -19,26 +19,24 @@
         padding-right: 15%;
     }
 }
-@media (max-width: 800px)
+@media (max-width: 1250px)
 {
     .Areas{
         padding-left: 10%;
         padding-right: 10%;
     }
 }
-@media (max-width: 600px)
+@media (max-width: 700px)
 {
     .Areas{
-        padding-left: 10%;
-        padding-right: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 }
 
 body{
     background-color: #212428;
 }
-/* .Mercado{
-} */
 .cardsAreas{
     display: flex;
     flex-wrap: wrap;
@@ -56,9 +54,17 @@ body{
     box-shadow: 10px 10px 25px -10px rgba(0, 0, 0, 0.342), -10px -10px 25px -10px rgba(255, 255, 255, 0.082);
     
 }
+@media (max-width: 600px)
+{
+    .card{
+        width: 100%;
+        height: auto;
+        
+    }
+}
 .card H3{
     text-align: center;
-    font-weight: 800;
+    font-weight: 600;
 }
 .videos{
     /* margin-top: -9rem; */
@@ -97,7 +103,7 @@ body{
     justify-content:center;
     align-items: center;
     text-decoration-line: none;
-    width: 70%;
+    width: 25rem;
     height: 3.5rem;
     border: 0;
     border-radius: 5px;
@@ -109,4 +115,10 @@ body{
     box-shadow: 5px 5px 5px -5px rgba(0, 0, 0, 0.342),
         -5px -5px 5px -5px rgba(255, 255, 255, 0.082);
     cursor: pointer;
+}
+@media (max-width: 769px)
+{
+    .cotacaoAreas {
+        width: 100%;
+    }
 }
