--- a/src/components/Sobre.css
+++ b/src/components/Sobre.css
@@ -8,23 +8,44 @@
     box-shadow: 10px 10px 25px -10px rgba(0, 0, 0, 0.342),
         -10px -10px 25px -10px rgba(255, 255, 255, 0.082);
 }
-@media (max-width: 769px)
+@media (max-width: 1050px)
 {
     .cardSobre {
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 21rem;
         padding: 1.5rem;
+    }
+}
+@media (max-width: 900px)
+{
+    /* .cardsSobre{
+        flex-wrap: wrap-reverse;
+        flex-direction: row-reverse;
+    } */
+    .tituloSobre{
+        text-align: center;
+    }
+    .cardSobre {
+        width: 18rem;
+        height: auto;
+        padding: 1rem;
+    }
+}
+@media (max-width: 400px)
+{
+    .Areas{
+        padding: 5%;
     }
 }
 .cardsSobre {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+    flex-direction: row;
     margin-bottom: 3rem;
     justify-content: space-around;
     align-items: center;
     
 }
-
 .cardSobre H3 {
     text-align: center;
 }
@@ -35,6 +56,10 @@
 }
 .tituloSobre {
     width: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
 }
 .tituloSobre H1 {
     font-size: 38px;
@@ -45,27 +70,12 @@
     font-size: 10px;
     color: #f9004d;
     font-weight: 600;
-    margin-bottom: 2rem;
+    margin-bottom: 0; 
 }
 .tituloSobre p {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-
     margin-bottom: 2rem;
-}
-.tituloSobre button {
-    width: 60%;
-    height: 2.5rem;
-    border: 0;
-    border-radius: 5px;
-    background-color: #212428;
-    font-family: "Montserrat", sans-serif;
-    font-size: 10px;
-    color: #f9004d;
-    font-weight: 600;
-    box-shadow: 5px 5px 5px -5px rgba(0, 0, 0, 0.342),
-        -5px -5px 5px -5px rgba(255, 255, 255, 0.082);
-    cursor: pointer;
 }
 
 .cotacaoSobre {
@@ -86,6 +96,7 @@
         -5px -5px 5px -5px rgba(255, 255, 255, 0.082);
     cursor: pointer;
 }
+
 .whats {
     font-size: 1.5rem;
     margin-right: 0.5rem;
