--- a/src/components/Foot.css
+++ b/src/components/Foot.css
@@ -2,6 +2,8 @@
     
     font-family: "Poppins", sans-serif;
     font-size: 10px;
+    color: #002c66;
+    font-weight: 600;
     margin: 2rem;
 }
 
