--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-image: radial-gradient(circle, #584f55 ,#1e1b1f);
+    background-image: radial-gradient(circle, #1d60a7 ,#002c66);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
